// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WhoAreWeHeader renders correctly 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR ieiSrW"
      style="max-width: 1360px;"
    >
      <div
        class="sc-fqkvVR sc-jXbUNg bHaeEi gdCncd"
      >
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-3e81e923-0 fgBWrW djyvKT iAkSYx dRudWH"
        >
          <div
            class="sc-fqkvVR sc-kAyceB fgBWrW kKfJVM"
          >
            <h1
              class="sc-kpDqfm cRJejs"
            >
              <span
                class="sc-dAlyuH bOvjMx"
              >
                TESTING_TITLE
              </span>
            </h1>
            <p
              class="sc-dLMFU hxKUrX"
            >
              TESTING_CONTENT
            </p>
          </div>
        </div>
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-3e81e923-1 fgBWrW joHkzz dGlNMa gxonpk"
        >
          <div
            class="sc-fqkvVR dBkKun"
          >
            <div
              class="sc-fqkvVR hudrT"
            >
              <img
                alt="Oak logo"
                class="sc-dcJsrY jRtmJB"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src="http://example.com/image.svg"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`WhoAreWeHeader renders correctly with no image 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR ieiSrW"
      style="max-width: 1360px;"
    >
      <div
        class="sc-fqkvVR sc-jXbUNg bHaeEi gdCncd"
      >
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-3e81e923-0 fgBWrW djyvKT iAkSYx dRudWH"
        >
          <div
            class="sc-fqkvVR sc-kAyceB fgBWrW kKfJVM"
          >
            <h1
              class="sc-kpDqfm cRJejs"
            >
              <span
                class="sc-dAlyuH bOvjMx"
              >
                TESTING_TITLE
              </span>
            </h1>
            <p
              class="sc-dLMFU hxKUrX"
            >
              TESTING_CONTENT
            </p>
          </div>
        </div>
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-3e81e923-1 fgBWrW joHkzz dGlNMa gxonpk"
        >
          <div
            class="sc-fqkvVR fgBWrW"
            style="position: absolute; top: -178px; right: calc(-40rem + 50vw - 340px); width: 1000px; height: 700px; transform: rotate(-8deg);"
          >
            <div
              class="sc-fqkvVR dogHqD"
            >
              <img
                alt="Background looping line"
                class="sc-dcJsrY Sspmc"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src="https://res.cloudinary.com/oak-web-application/image/upload/v1740665310/OWA/ui-graphics/looping-line-5_vdknco.svg"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
